# CTorch

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CodeStyle.txt  Dev_log.md  FirstRun_AllBugs_Report.md  Inspirations.md  Inspirations.txt  LICENSE  Makefile  README.md  TEST.md  Test.md  test.cpp  testConfig.cfg
docs/: API_Guide.md  Doxyfile  MainPage.md
docs/html/: _a_p_i___guide_8md.html  _auto_diff_8cpp.html  _auto_diff_8cpp.js  _auto_diff_8cpp__incl.map  _auto_diff_8cpp__incl.md5  _auto_diff_8cpp_source.html  _auto_diff_8h.html  _auto_diff_8h.js  _auto_diff_8h__dep__incl.map  _auto_diff_8h__dep__incl.md5  _auto_diff_8h__incl.map  _auto_diff_8h__incl.md5  _auto_diff_8h_source.html  _ctools_8cpp.html  _ctools_8cpp.js  _ctools_8cpp__incl.map  _ctools_8cpp__incl.md5  _ctools_8cpp_source.html  _ctools_8h.html  _ctools_8h.js  _ctools_8h__dep__incl.map  _ctools_8h__dep__incl.md5  _ctools_8h__incl.map  _ctools_8h__incl.md5  _ctools_8h_source.html  _ctorch___error_8h.html  _ctorch___error_8h.js  _ctorch___error_8h__dep__incl.map  _ctorch___error_8h__dep__incl.md5  _ctorch___error_8h__incl.map  _ctorch___error_8h__incl.md5  _ctorch___error_8h_source.html  _ctorch___scheduler_8h.html  _ctorch___scheduler_8h.js  _ctorch___scheduler_8h__dep__incl.map  _ctorch___scheduler_8h__dep__incl.md5  _ctorch___scheduler_8h__incl.map  _ctorch___scheduler_8h__incl.md5  _ctorch___scheduler_8h_source.html  _main_page_8md.html  (+140 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_21.js  all_22.js  all_24.js  all_26.js  all_27.js  all_28.js  all_2a.js  all_2e.js  all_31.js  all_38.js  all_3c.js  all_3f.js  all_40.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+77 more)
include/: AutoDiff.h  Ctools.h  Ctorch_Error.h  Ctorch_Scheduler.h  Storage.h  Tensor.h  ThreadPool.h
include/AutoGrad/: Core.h  DataCore.h  GradFn.h  IDDistributor.h  Node.h
include/AutoGrad/Nodes/: AddNode.h  MulNode.h  SubNode.h
include/dev/: AD_fix.h  AutoDiff.cppm  Ctools.cppm  Ctorch_Error.cppm  Ctorch_Scheduler.cppm  Functional.cppm  NeuralNet.cppm  Storage.cppm  Tensor.cpp  Tensor.cppm  Tensor_API.md  Tensor_dev.cppm  Tensor_fixed.h  basics.h  ctPool.cppm  kernels.cppm  tensor.cppm
mnist/: CMakeLists.txt  mnist.cpp  mnist_loader.cpp  mnist_loader.h
src/: AutoDiff.cpp  Ctools.cpp  Storage.cpp  Tensor.cpp  ThreadPool.cpp
src/AutoGrad/: Core.cpp  DataCore.cpp  IDDistributor.cpp  Node.cpp
src/AutoGrad/Nodes/: AddNode.cpp  MulNode.cpp  SubNode.cpp
src/dev/: AutoDiff.cpp  AutoDiff.h  CMakeLists.txt  Ctools.cpp  Ctools.h  Ctorch_Error.h  Ctorch_Scheduler.h  Functional.cpp  NeuralNet.cpp  Storage.cpp  Storage.h  Tensor.cpp  Tensor.h  Tensor_dev.cpp  Tensor_fixed.h  ctPool.cpp  large_scale_test.cpp  main.cpp  performance_test.cpp  tensor.cpp  test.cpp  test_activation_loss.cpp  test_module.cppm  test_tensor_grad.cpp
src/dev/kernels/: kernels.h
src/dev/kernels/CPU-BASIC/: Add_BASIC_kernel.cpp  Cos_BASIC_kernel.cpp  CrossEntropy_BASIC_kernel.cpp  Div_BASIC_kernel.cpp  Dot_BASIC_kernel.cpp  MAE_BASIC_kernel.cpp  MSE_BASIC_kernel.cpp  MatMul_BASIC_kernel.cpp  Mul_BASIC_kernel.cpp  Neg_BASIC_kernel.cpp  ReLU_BASIC_kernel.cpp  Sigmoid_BASIC_kernel.cpp  Sin_BASIC_kernel.cpp  Softmax_BASIC_kernel.cpp  Sub_BASIC_kernel.cpp  Tanh_BASIC_kernel.cpp
src/dev/kernels/CPU-SIMD/: Sub_SIMD_kernel.cpp  Tanh_SIMD_kernel.cpp
src/dev/test/: test.cpp  test1.cpp
src/dev/tests/: Ctorch_Error.h
src/dev/tests/Storage/: Storage-BasicAttributes.cpp  Storage-Initialization.cpp
src/dev/tests/Tensor/: Tensor-BasicAttributes.cpp  Tensor-DataVisit.cpp  Tensor-Initialization.cpp  Tensor-TensorOperations.cpp
src/kernels/: kernels.h
src/kernels/CPU-BASIC/: Add_BASIC_kernel.cpp  Cos_BASIC_kernel.cpp  CrossEntropy_BASIC_kernel.cpp  Div_BASIC_kernel.cpp  Dot_BASIC_kernel.cpp  MAE_BASIC_kernel.cpp  MSE_BASIC_kernel.cpp  MatMul_BASIC_kernel.cpp  Mul_BASIC_kernel.cpp  Neg_BASIC_kernel.cpp  ReLU_BASIC_kernel.cpp  Sigmoid_BASIC_kernel.cpp  Sin_BASIC_kernel.cpp  Softmax_BASIC_kernel.cpp  Sub_BASIC_kernel.cpp  Tanh_BASIC_kernel.cpp
src/kernels/CPU-SIMD/: Add_SIMD_kernel.cpp  Div_SIMD_kernel.cpp  Mul_SIMD_kernel.cpp
src/tests/: test.cpp  test_activation_loss.cpp  test_tensor_grad.cpp
